--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/alfston/A5#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "mongoose": "^5.11.0"
   }
 }
